﻿Pulse Changelog

Pulse-4.11.3
 * Update the prediction model for Narrowband Range.

Pulse-4.11.2
 * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
 * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
 * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.

Pulse-4.11.1
 * Updated Prediction Model System Init Time.

Pulse-4.11.0
 - Updated how the Ensembles are passed to the display.
 - Moved loading data with CreateProject() for playback to PulseManager in NavBarViewModel and SelectPlaybackViewModel.
 - In NmeaDataSet, check for exceptions in SetValue() and SetNmeaStringArray().
 - In SerialOptions, added 57600 baud rate.

Pulse-4.10.1
 - Fixed bug in PD4/5 where the HeaderStart was not locked when clearing the codec.

Pulse-4.10.0
 - Added DataFormatOptions.
 - Added DataFormatView to NavBar.

Pulse-4.9.0
 - In Project view, make the user refresh or generate a missing image instead of doing it automatically.
 - Clean up Export view.
 - In Export, added Screening Options.

Pulse-4.8.1
 - Added tooltips to special BREAK button in terminal and fixed the colors.

Pulse-4.8.0
 - Update Heatmap Plot.
 - Update Mark Bad Below Bottom.

Pulse-4.7.2
 - Update project pages with absorption prediction model.
 - Fix AutoUpdate to have a messagebox pop up when an update is available.

Pulse-4.7.1
 - Added Absorption to prediction model

Pulse-4.7.0
 - Fixed bug in Prediction Model with System Init Time.
 - Made the serial port not send a BREAK at startup for the ADCP.

Pulse-4.6.1
 - Fixed bug with DVL codecs not being initialized.
 - Fixed bug with Burst power calculation.
 - In NavBarViewModel, in LoadFiles() first check if its a binary file, then try all codec types.   
 - In SelectPlaybackViewModel, made File playback match NavBarViewModel's file playback.  

Pulse-4.6.0
 - Fixed bug in Prediction Model for burst data storage calculations.