@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.11.3 ChangeLog</title>
+		<title>Version 4.11.4 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -10,7 +10,10 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.11.3</span>
+            <br /><span class="auto-style1">Pulse-4.11.4</span>
+            <br />  Pulse-4.11.4
+            <br />  * Updated bug in Prediction Model for Narrowband Max Velocity.
+            <br />
             <br />  Pulse-4.11.3
             <br />  * Update the prediction model for Narrowband Range.
             <br />
@@ -81,7 +84,10 @@
             <br />   - In PredictionModel, fix bug in GetBurstDataStorage() when calculating number of burst per deployment.
             <br />   - In PredictionModel, fix bug in CalculatePowerBurst() when calculating number of burst per deployment.
             <br />
-            <br /><span class="auto-style1">Pulse-Display-4.10.1</span>
+            <br /><span class="auto-style1">Pulse-Display-4.10.2</span>
+            <br />   Pulse-Display-4.10.2
+            <br />   * In PredictionModel, fixed bug with Narrowband Max Velocity.
+            <br />
             <br />   Pulse-Display-4.10.1
             <br />   * In PredictionModel, updated the Prediction Model to Rev Y with the Narrowband Profile range.
             <br />
